[project]
name = "RyuuNoodles"
description = "Collection of one or more custom nodes for ComfyUI made mainly for personal use (GitHub README for more info). \nNodes: live Token Counter on any node, switch nodes with fallback functionality and FLOAT/INT nodes (and maybe more)."
version = "1.4.3"
license = { file = "LICENSE" }
dependencies = ["transformers", "aiohttp"]


[project.urls]
Repository = "https://github.com/DraconicDragon/ComfyUI-RyuuNoodles"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "drac"
DisplayName = "ComfyUI-RyuuNoodles"
Icon = "https://raw.githubusercontent.com/DraconicDragon/ComfyUI-RyuuNoodles/refs/heads/main/assets/RyuuNoodles_Icon_L.webp"
