[project]
name = "RyuuNoodles"
description = "Collection of a few custom nodes made mainly for personal use (See GitHub README for more info). \nFeatures: live Token Counter on any node/widget; Switch + Passthrough nodes with fallback functionality; Some personally tailored FLOAT/INT nodes (and a bit more)."
version = "2.2.2"
license = { file = "LICENSE" }
dependencies = ["transformers", "aiohttp", "color-matcher"]


[project.urls]
Repository = "https://github.com/DraconicDragon/ComfyUI-RyuuNoodles"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "drac"
DisplayName = "ComfyUI-RyuuNoodles"
Icon = "https://raw.githubusercontent.com/DraconicDragon/ComfyUI-RyuuNoodles/refs/heads/main/assets/RyuuNoodles_Icon_L.webp"
